adapt home and base template

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 {% block title %}Home{% endblock %}
 
 {% block navbar %}
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-dark bg-dark">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="{% url 'home' %}">Vesterby</a>
