--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,49 @@
 {% block title %}Home{% endblock %}
 
 {% block navbar %}
-<nav class="navbar navbar-dark bg-dark">
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="{% url 'home' %}">Vesterby</a>
+    {% if user.is_authenticated %}
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <ul class="nav justify-content-end">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">{{ user.username }}<i class="bi bi-person-circle" style="font-size: 1rem; color: rgb(255,255,255);"></i></a>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">Logout</a></li>
+          <li><a class="dropdown-item" href="#">Something else here</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item" href="#">Change Password</a></li>
+        </ul>
+      </li>
+    </ul>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'expense_list' %}">Ausgaben</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Anwesenheiten</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Kostenstellen</a>
+        </li>
+      </ul>
+    </div>
+
+
+
+
+    {% endif %}
+  </div>
+</nav>
+
+<!--nav class="navbar navbar-dark bg-dark">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="{% url 'home' %}">Vesterby</a>
@@ -42,7 +84,7 @@
 
     {% endif %}
   </div>
-</nav>
+</nav-->
 {% endblock %}
 
 {%block content %}
