--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="utf-8">
   <title>{% block title %}Vesterby{% endblock %}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   {% load django_bootstrap5 %}
   {% bootstrap_css %}
   {% bootstrap_javascript %}
