--- a/templates/home.html
+++ b/templates/home.html
@@ -19,8 +19,15 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'expense_list' %}">Ausgaben</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Anwesenheiten</a>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Finanzen</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="{% url 'costcenter_list' %}">Kostenstellen</a>
+            <a class="dropdown-item" href="{% url 'share_list' %}">Beteiligungen</a>
+            <a class="dropdown-item" href="{% url 'expense_list' %}">Ausgaben</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Überweisungen</a>
+          </div>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Kostenstellen</a>
