--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,13 +1,27 @@
 <!-- templates/registration/login.html -->
 {% extends "home.html" %}
 
+{% load django_bootstrap5 %}
+
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<h2>Log In</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form }}
-  <button type="submit">Log In</button>
-</form>
+<!--div class = "card m-4"-->
+<div class="card m-4 mx-auto text-center" style="width: 22rem;">
+
+  <h5 class="card-header">log In</h5>
+    <div class="card-body">
+
+      <form method="post">
+          {% csrf_token %}
+      
+          {% bootstrap_form form layout=layout size=size %}
+      
+          {% bootstrap_button button_type="submit" content="OK" %}
+          {% bootstrap_button button_type="reset" content="RESET" %}
+      </form>
+
+    </div>
+  
+</div>
 {% endblock %}
